对接钱包模块

--- a/property/account-info.html
+++ b/property/account-info.html
@@ -33,7 +33,7 @@
 				</ul>
 			</div>
 		</div>
-		<div id="middlePopover" class="mui-popover">
+		<div id="middlePopover" class="mui-popover" style="min-height: 380px;">
 			<div class="mui-scroll-wrapper">
 				<p class="modal_title">选择头像</p>
 				<div class="mui-row all_head">
