--- a/property/export-private-key.html
+++ b/property/export-private-key.html
@@ -19,7 +19,7 @@
 			<div class="key_content">
 				<div class="key_box">
 					<!--<input type="text" value="" readonly="readonly" id="keyInput" />-->
-					<textarea readonly="readonly" id="keyInput" ></textarea>
+					<textarea readonly="readonly" id="keyInput"></textarea>
 					<!--<span id="keyBox"></span>-->
 				</div>
 				<div class="backup_button" id="copyKey" data-clipboard-action="copy" data-clipboard-target="#keyInput">点击复制私钥</div>
@@ -60,6 +60,7 @@
 		<script src="../js/clipboard/clipboard.min.js"></script>
 		<script type="text/javascript">
 			mui.init();
+
 			// 复制私钥
 			var clipboard = new ClipboardJS('#copyKey');
 
@@ -76,12 +77,7 @@
 					type: 'div'
 				})
 			});
-			
-			// 获取钱包信息
-			var purseInfo = store.get('dcarPurse');
-			$('#keyInput').val(purseInfo[0].privateKey);
-//			$('#keyBox').html(purseInfo[0].privateKey);
-			// #end
+
 			mui.plusReady(function() {
 				// 弹出请勿截图 提示
 				mui('.alert_box').popover('show');
@@ -91,8 +87,15 @@
 				$("#showCode").on("click", function() {
 					mui('.code_box').popover('toggle');
 				});
+				// 获取钱包信息
+				var self = plus.webview.currentWebview();
+				purseIndex = self.purseIndex;
+				console.log(purseIndex);
+				var purseInfo = store.get('dcarPurse');
+				console.log(purseInfo[purseIndex].privateKey);
+				$('#keyInput').val(purseInfo[purseIndex].privateKey);
 			});
-			
+
 			// 显示二维码
 			var keystore = store.get('keystore');
 			var qrcode = new QRCode(document.getElementById("qrcode"), {
@@ -100,7 +103,7 @@
 					"version": 3,
 					"id": "4b108243-2b81-494f-8ff9-90ee37eb4091",
 					"address": "ef9be7ce13bda174d7d6eda0c95f7f759b079276",
-					"crypto": keystore
+					"crypto": 'purseInfo[purseIndex].keystore'
 				},
 				width: 128,
 				height: 128,
