--- a/property/wallet-address.html
+++ b/property/wallet-address.html
@@ -22,7 +22,7 @@
 				<img src="../img/property/code_border.png" alt="" class="codeBorder" />
 			</div>
 			<div class="address_box">
-				<textarea readonly="readonly" id="addressBox" ></textarea>
+				<textarea readonly="readonly" id="addressBox"></textarea>
 			</div>
 			<div class="copy_btn" id="copyAddress" data-clipboard-action="copy" data-clipboard-target="#addressBox">点击复制钱包地址</div>
 			<div id="qrcode"></div>
@@ -36,7 +36,13 @@
 		<script src="../js/clipboard/clipboard.min.js"></script>
 		<script type="text/javascript">
 			mui.init();
-			// 复制地址
+			mui.plusReady(function() {
+				var self = plus.webview.currentWebview();
+				purseIndex = self.purseIndex;
+				var purseInfo = store.get('dcarPurse');
+				$('#addressBox').val(purseInfo[purseIndex].address);
+			})
+			// 复制地址 
 			var clipboard = new ClipboardJS('#copyAddress');
 
 			clipboard.on('success', function(e) {
@@ -53,16 +59,13 @@
 				})
 			});
 			// 显示二维码
-			var purseInfo = store.get('dcarPurse');
-			var keystore = store.get('keystore');
 			//			alert(purseInfo[0].address);
-			$('#addressBox').html(purseInfo[0].address);
 			var qrcode = new QRCode(document.getElementById("qrcode"), {
 				text: {
 					"version": 3,
 					"id": "4b108243-2b81-494f-8ff9-90ee37eb4091",
 					"address": "ef9be7ce13bda174d7d6eda0c95f7f759b079276",
-					"crypto": keystore
+					"crypto": 'purseInfo[purseIndex].keystore'
 				},
 				width: 128,
 				height: 128,
