--- a/pages/property.html
+++ b/pages/property.html
@@ -47,7 +47,7 @@
 					</div>
 				</div>-->
 			</div>
-			<div class="yellow_bg card_one mui-row" id="eth_purse" onclick="go_detail(2)">
+			<!--<div class="yellow_bg card_one mui-row" id="eth_purse" onclick="go_detail(2)">
 				<div class="mui-col-sm-3 mui-col-xs-3">
 					<img src="../img/property/wallet.png" alt="" />
 				</div>
@@ -68,7 +68,7 @@
 					<div>&yen;0.00</div>
 					<div>0xbsdakdhkdsidusidshhskkh</div>
 				</div>
-			</div>
+			</div>-->
 		</div>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/store/dist/store.legacy.min.js" type="text/javascript" charset="utf-8"></script>
@@ -124,7 +124,7 @@
 											+'<img src="../img/property/wallet.png" alt="" />'
 										+'</div>'
 										+'<div class="mui-col-sm-6 mui-col-xs-6">'
-											+'<div>DCAR-Wallet</div>'
+											+'<div>'+ t.name +'</div>'
 											+'<div>0.000DCAR</div>'
 											+'<div>&yen;0.00</div>'
 											+'<div>'+ t.address +'</div>'
