--- a/property/wallet-address.html
+++ b/property/wallet-address.html
@@ -41,6 +41,17 @@
 				purseIndex = self.purseIndex;
 				var purseInfo = store.get('dcarPurse');
 				$('#addressBox').val(purseInfo[purseIndex].address);
+				var keystore = purseInfo[purseIndex].keystore;
+				if(keystore !== undefined) {
+					var qrcode = new QRCode(document.getElementById("qrcode"), {
+						text: keystore,
+						width: 128,
+						height: 128,
+						colorDark: "#000000",
+						colorLight: "#ffffff",
+						correctLevel: QRCode.CorrectLevel.L
+					});
+				}
 			})
 			// 复制地址 
 			var clipboard = new ClipboardJS('#copyAddress');
@@ -60,19 +71,6 @@
 			});
 			// 显示二维码
 			//			alert(purseInfo[0].address);
-			var qrcode = new QRCode(document.getElementById("qrcode"), {
-				text: {
-					"version": 3,
-					"id": "4b108243-2b81-494f-8ff9-90ee37eb4091",
-					"address": "ef9be7ce13bda174d7d6eda0c95f7f759b079276",
-					"crypto": 'purseInfo[purseIndex].keystore'
-				},
-				width: 128,
-				height: 128,
-				colorDark: "#000000",
-				colorLight: "#ffffff",
-				correctLevel: QRCode.CorrectLevel.H
-			});
 		</script>
 	</body>
 
