--- a/property/code.html
+++ b/property/code.html
@@ -1,16 +1,35 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 
 	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-		<meta name="HandheldFriendly" content="true" />
-		<meta name="MobileOptimized" content="320" />
-		<title>Hello H5+</title>
-		<script type="text/javascript" src="../js/common.js"></script>
+		<meta charset="UTF-8">
+		<title></title>
+		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+		<link href="../css/mui.min.css" rel="stylesheet" />
+		<link rel="stylesheet" type="text/css" href="../css/style.css" />
+		<link rel="stylesheet" type="text/css" href="../css/barcode.css" />
+	</head>
+
+	<body>
+		<header class="mui-bar mui-bar-nav header">
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+			<h1 class="mui-title">扫一扫</h1>
+			<a class="complete_btn" onclick="scanPicture()">相册</a>
+		</header>
+		<div id="bcid">
+			<div style="height:40%"></div>
+			<p class="tip">载入中...</p>
+		</div>
+		<script src="../js/mui.min.js"></script>
+		<script src="../js/jquery-2.1.1.min.js"></script>
+		<script src="../js/common.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../js/benben.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../js/qrcode.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../js/store/dist/store.legacy.min.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
 			var ws = null,
-				wo = null;
+				wo = null,
+				way = null;
 			var scan = null,
 				domready = false;
 			// H5 plus事件处理
@@ -20,17 +39,20 @@
 				}
 				// 获取窗口对象
 				ws = plus.webview.currentWebview();
+				way = plus.webview.getWebviewById("../property/import-wallet.html");
 				wo = ws.opener();
 				// 开始扫描
 				ws.addEventListener('show', function() {
-					scan=new plus.barcode.Barcode('bcid',[plus.barcode.QR,plus.barcode.EAN8,plus.barcode.EAN13],{frameColor:'#4384C5',scanbarColor:'#4384C5'});
+					scan = new plus.barcode.Barcode('bcid', [plus.barcode.QR, plus.barcode.EAN8, plus.barcode.EAN13], {
+						frameColor: '#4384c5',
+						scanbarColor: '#4384c5'
+					});
 					scan.onmarked = onmarked;
 					scan.start({
 						conserve: true,
 						filename: '_doc/barcode/'
 					});
-				}, false);
-				// 显示页面并关闭等待框
+				});// 显示页面并关闭等待框
 				ws.show('pop-in');
 				wo.evalJS('closeWaiting()');
 			}
@@ -62,8 +84,12 @@
 				}
 				result = result.replace(/\r\n/g, '');
 				wo.evalJS("scaned('" + type + "','" + result + "','" + file + "');");
+				mui.toast('扫描二维码成功');
+				console.log(result)
+				store.set("result", result);
+				way.evalJS("getResult()")
 				back();
-			}
+		}
 			// 从相册中选择二维码图片 
 			function scanPicture() {
 				plus.gallery.pick(function(path) {
@@ -75,30 +101,6 @@
 				});
 			}
 		</script>
-		<link rel="stylesheet" href="../css/common.css" type="text/css" charset="utf-8" />
-		<link rel="stylesheet" href="../css/code.css" type="text/css" charset="utf-8" />
-		<link href="../css/mui.min.css" rel="stylesheet" />
-		<link rel="stylesheet" type="text/css" href="../css/style.css" />
-	</head>
-
-	<body>
-		<header class="mui-bar mui-bar-nav header">
-			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title">扫一扫</h1>
-			<a class="complete_btn" onclick="scanPicture()">相册</a>
-		</header>
-		<div id="bcid">
-			<div style="height:40%"></div>
-			<p class="tip">...载入中...</p>
-			<p>sss</p>
-		</div>
-		<div class="code_alert">
-			<p>请将扫描框对准二维码</p>
-		</div>
-		<!--<footer>
-			<div class="fbt" onclick="back()">取　 消</div>
-			<div class="fbt" onclick="scanPicture()">从相册选择二维码</div>
-		</footer>-->
 	</body>
 
 </html>
