--- a/property/import-wallet.html
+++ b/property/import-wallet.html
@@ -83,14 +83,23 @@
 					// 获取钱包信息
 					try {
 						var wallet = web3.eth.accounts.decrypt(keystoreJsonV3, password);
-						// 读取 钱包地址
-						console.log(wallet.address);
-						// 读取 私钥
-						console.log(wallet.privateKey);
-						mui.toast('钱包导入成功')
+						var purse_data = store.get("dcarPurse");
+						var eth_data = store.get("ethPurse");
+						for (var i=0; i<purse_data.length; i++){
+							if (purse_data[i].privateKey == wallet.privateKey) {
+								eth_data.push(purse_data[i]);
+							}
+						}
+						store.set('ethPurse', eth_data);
+						mui.toast('钱包导入成功');
+						var time = null;
+						clearTimeout(time);
+						setTimeout(function(){
+							plus.webview.getWebviewById("pages/property.html").evalJS("showEthPurse()");
+							plus.webview.currentWebview().close();
+						}, 1000);
 					}catch(err){
 						mui.toast('密码输入错误');
-						console.log("错误")
 					}
 				}
 			})
