--- a/pages/mine.html
+++ b/pages/mine.html
@@ -64,6 +64,7 @@
 			</ul>
 		</div>
 		<script src="../js/mui.min.js"></script>
+		<script src="../js/store/dist/store.legacy.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/jquery-2.1.1.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/benben.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/common.js" type="text/javascript" charset="utf-8"></script>
@@ -75,6 +76,7 @@
 				}
 			}
 			$("#cleanCach").on("click", function() {
+				store.clearAll();
 				mui.toast('缓存清理完成',{ duration: 2000, type:'div' })
 			})
 			detection()
