--- a/pages/property.html
+++ b/pages/property.html
@@ -92,6 +92,8 @@
 			function showDcarPurse() {
 				var arr = store.get('dcarPurse')
 				if(arr == undefined || arr == null || arr == "") {
+					$("#dcar_purse").hide();
+					$("#creat_dcar").show();
 					var dcarArray = []
 					store.set('dcarPurse', dcarArray)
 				} else {
@@ -132,6 +134,8 @@
 			function showEthPurse(){
 				var eth = store.get('ethPurse')
 				if(eth == undefined || eth == null || eth == "") {
+					$("#eth_purse").hide();
+					$("#import_eth").show();
 					var ethArray = []
 					store.set('ethPurse', ethArray)
 				} else {
